# localpush

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  RESUME.md  ROADMAP.md  TESTING.md  TODO.md  biome.json  eslint.config.js  eslint.config.mjs  index.html  lefthook.yml  package-lock.json  package.json  vitest.config.ts
.claude/: settings.json
.codex/: config.toml  (+3 more)
src-tauri/: AGENTS.md  CLAUDE.md  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bindings.rs  config.rs  delivery_worker.rs  desktop_activity_worker.rs  error_diagnosis.rs  events.rs  instance_guard.rs  iokit_idle.rs  ledger.rs  lib.rs  main.rs  scheduled_worker.rs  source_config.rs  source_manager.rs  state.rs  target_health.rs  target_manager.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/mocks/: mod.rs
src-tauri/src/production/: credential_store.rs  dev_credential_store.rs  file_watcher.rs  mod.rs  webhook_client.rs
src-tauri/src/sources/: apple_notes.rs  apple_photos.rs  apple_podcasts.rs  cic_task_output.rs  claude_sessions.rs  claude_sessions_collector.rs  claude_stats.rs  codex_sessions.rs  codex_stats.rs  desktop_activity.rs  mod.rs
src-tauri/src/targets/: custom.rs  google_sheets.rs  make.rs  mod.rs  n8n.rs  ntfy.rs  zapier.rs
src-tauri/src/traits/: credential_store.rs  delivery_ledger.rs  file_watcher.rs  mod.rs  target.rs  webhook_client.rs
src-tauri/tests/: integration_test.rs
src-tauri/tests/fixtures/codex/2026-02-23/: README.md  manifest.json
src-tauri/tests/fixtures/codex/2026-02-23/expected/: codex-sessions.json  codex-stats.json
(+185 files in other folders)
